# SeniorDesignGlue

./: .gitignore  README.md  docker-compose-prod.yaml  docker-compose.yaml
.github/workflows/: GlueBuilder.yml
backend/: Dockerfile.prod  local.py  prod_server.py  pyproject.toml
backend/app/: common.py  server.py
backend/app/database_hooks/: my_sql_db.py
backend/app/routers/: auth.py  sql.py
frontend/: Dockerfile.prod  main.js  package-lock.json  package.json  preload.js  server.js
frontend/renderer/pages/: home.jsx
frontend/src/: constants.js
frontend/src/app/: layout.js  page.js  page.jsx
frontend/src/app/cohorts/: page.jsx
frontend/src/app/cohorts/[code]/: page.jsx
frontend/src/app/login/: page.jsx
frontend/src/app/quick_stats/: page.jsx
frontend/src/app/sql/: page.jsx
frontend/src/app/students/: page.jsx
frontend/src/components/Dashboards/: GeneralDashboard.jsx  StudentDashboard.jsx  TeamQuickStats.jsx
frontend/src/components/Toolbars/: Navbar.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/hooks/: Generics.jsx  Users.jsx  sqlHooks.jsx
frontend/src/wrappers/: NormalPageWrapper.jsx
nginx/config/: nginx.conf
to_restore/: MDE_HF.backup
