[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Henry Forsyth <robert.h.forsyth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.14"
fastapi = "^0.115.0"
colorama = "^0.4.6"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.35"
psycopg2 = "^2.9.9"
black = "^24.10.0"
pyinstaller = "^6.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
